--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,7 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     api "com.android.support:recyclerview-v7:27.1.1"
     api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30'
+    //图片加载
+    implementation 'jp.wasabeef:glide-transformations:4.0.1'
+    //implementation 'com.github.WXFY:Musiclibrary:V1.0'
 }
