--- a/musiclibrary/src/main/AndroidManifest.xml
+++ b/musiclibrary/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <application>
         <service android:name=".service.MusicPlayerService"
-            android:process=":music"/>
+            android:process=":music">
+        </service>
     </application>
 </manifest>
