--- a/musiclibrary/build.gradle
+++ b/musiclibrary/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     api 'com.android.support:appcompat-v7:27.1.1'
     api 'com.danikula:videocache:2.7.1'
+    implementation 'com.android.support:support-v4:27.1.1'
 }
