--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,8 @@
 apply plugin: 'com.android.application'
+//必须
+apply plugin: 'kotlin-android'
+
+apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 27
@@ -32,4 +36,5 @@ dependencies {
     implementation 'jp.wasabeef:glide-transformations:4.0.1'
     //implementation 'com.github.WXFY:Musiclibrary:V1.0'
     implementation 'com.github.bogerchan:Nier-Visualizer:v0.1.3'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 }
