--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,12 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    
+    ext.kotlin_version = '1.3.31'
     repositories {
         google()
         jcenter()
         maven { url "https://jitpack.io" }
+        maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
         maven {
             url 'https://maven.google.com/'
             name 'Google'
@@ -13,6 +14,8 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.2'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-android-extensions:$kotlin_version"
         
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -25,6 +28,7 @@ allprojects {
         google()
         jcenter()
         maven { url "https://jitpack.io" }
+        maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
         maven {
             url 'https://maven.google.com/'
             name 'Google'
